fix: update styling

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,5 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.6;
@@ -10,11 +8,17 @@ body {
 
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 a {
   color: #0070f3;
   text-decoration: none;
+}
+
+ul {
+  list-style: none;
 }
 
 button {
@@ -25,6 +29,10 @@ button {
   outline: none;
   cursor: pointer;
   padding: 0.6rem;
+}
+
+button:hover {
+  text-decoration: underline;
 }
 
 a:hover {
