--- a/src/components/Layout/index.module.css
+++ b/src/components/Layout/index.module.css
@@ -1,13 +1,7 @@
 .container {
-  max-width: 36rem;
+  max-width: 50rem;
   padding: 0 1rem;
   margin: 0 auto 6rem;
-}
-
-.header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .footer {
@@ -16,6 +10,30 @@
   align-items: center;
 }
 
-.backToHome {
-  margin: 3rem 0 0;
+.row {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: center;
+}
+
+.nav-link {
+  padding: 1rem;
+}
+
+.div {
+  display: flex;
+  align-self: center;
+}
+
+.nav {
+  padding: 0.5rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.li {
+  display: flex;
+  padding: 0 0.5rem;
+  align-self: center;
 }
