--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,24 +1,8 @@
 html,
 body {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Open Sans';
   line-height: 1.6;
-  font-size: 18px;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-ul {
-  list-style: none;
+  font-size: 1rem;
 }
 
 button {
@@ -26,7 +10,6 @@ button {
   color: #fff;
   border: none;
   border-radius: 0.2rem;
-  outline: none;
   cursor: pointer;
   padding: 0.6rem;
 }
@@ -35,11 +18,11 @@ button:hover {
   text-decoration: underline;
 }
 
-a:hover {
-  text-decoration: underline;
+a {
+  color: #0070f3;
+  text-decoration: none;
 }
 
-img {
-  max-width: 100%;
-  display: block;
+a:hover {
+  text-decoration: underline;
 }
