feat: add comments

--- a/src/components/Layout/index.module.css
+++ b/src/components/Layout/index.module.css
@@ -13,7 +13,7 @@
 .row {
   display: flex;
   flex-direction: row;
-  align-content: center;
+  align-items: center;
   justify-content: center;
 }
 
