--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,6 +5,12 @@ body {
   font-size: 1rem;
 }
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: 'border-box';
+}
+
 button {
   background-color: #0070f3;
   color: #fff;
