--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,7 +12,7 @@ body {
 }
 
 button {
-  background-color: #0070f3;
+  background-color: #59a715;
   color: #fff;
   border: none;
   border-radius: 0.2rem;
@@ -25,7 +25,7 @@ button:hover {
 }
 
 a {
-  color: #0070f3;
+  color: #59a715;
   text-decoration: none;
 }
 
